# c_bitmask

./: .clang-format  .clangd  .gitignore  .sources_cache  LICENSE  bench_results.txt  meson.build  oa_lut.h_planned_new
include/: benchmark.h  benchmarks.h  common.h  de_bitmask.h  unittests.h
src/: bitmask.c  main.c
